@startuml lab1_adapter_uml
title Lab 1 - Adapter Pattern: File Export (CSV / JSON / Text / XML)

interface FileWriter <<interface>> {
  + write(filename: string, rows: array): bool
}

class ReportExporter {
  - writer: FileWriter
  + export(filename: string, rows: array): void
}

class CsvFileAdapter {
  - csv: CsvLibrary
  + write(filename: string, rows: array): bool
}

class JsonFileAdapter {
  - json: JsonLibrary
  + write(filename: string, rows: array): bool
}

class TextFileAdapter {
  - text: TextLibrary
  + write(filename: string, rows: array): bool
}

class XmlWriterAdapter {
  - xml: XmlLibrary
  + write(filename: string, rows: array): bool
}

class CsvLibrary {
  + writeCsv(path: string, rows: array): bool
}

class JsonLibrary {
  + saveJson(path: string, payload: mixed): bool
}

class TextLibrary {
  + appendLine(path: string, line: string): bool
}

class XmlLibrary {
  + writeXmlDocument(path: string, rows: array): bool
}

' Client depends only on the Target abstraction (composition)
ReportExporter o-- FileWriter : uses >

' Adapters implement the Target (dashed, hollow triangle)
CsvFileAdapter ..|> FileWriter
JsonFileAdapter ..|> FileWriter
TextFileAdapter ..|> FileWriter
XmlWriterAdapter ..|> FileWriter

' Adapters wrap (compose) their incompatible Adaptee - translation happens
' inside each adapter's write() method, which calls the adaptee's real method name.
CsvFileAdapter *-- CsvLibrary : translates write()\n-> writeCsv()
JsonFileAdapter *-- JsonLibrary : translates write()\n-> saveJson()
TextFileAdapter *-- TextLibrary : translates write()\n-> appendLine() per row
XmlWriterAdapter *-- XmlLibrary : translates write()\n-> writeXmlDocument()

note right of XmlWriterAdapter
  4th adapter added later.
  ReportExporter, FileWriter, and
  every existing adapter/class are
  unchanged (Open/Closed Principle).
end note

@enduml
